--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                     <li><a href="tel:+110001111111" target="_blank" class="address link">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
+                <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg class="menu-toggle-icon" width="32" height="22">
+                <use href="./images/icons.svg#burger"></use>
+            </svg>
+            </button>
         </div>
 
     </header>
@@ -64,7 +69,7 @@
                                 <use href="./images/icons.svg#antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="header-tree header-preferenses">Strategy</h3>
+                        <h3 class="header-tree header-preferences">Strategy</h3>
                         <p class="body preferenses-descr">
                             Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
@@ -75,7 +80,7 @@
                                 <use href="./images/icons.svg#clock"></use>
                             </svg>
                         </div> 
-                        <h3 class="header-tree header-preferenses">Punctuality</h3>
+                        <h3 class="header-tree header-preferences">Punctuality</h3>
                         <p class="body preferenses-descr">
                             Bring the key message to the brand's audience for the best price within the shortest possible time.
                         </p>
@@ -86,7 +91,7 @@
                                 <use href="./images/icons.svg#diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="header-tree header-preferenses">Diligence</h3>
+                        <h3 class="header-tree header-preferences">Diligence</h3>
                         <p class="body preferenses-descr">
                             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
@@ -97,7 +102,7 @@
                                 <use href="./images/icons.svg#astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="header-tree header-preferenses">Technologies</h3>
+                        <h3 class="header-tree header-preferences">Technologies</h3>
                         <p class="body preferenses-descr">
                             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                         </p>
@@ -450,6 +455,40 @@
             </form>
         </div>
     </div> 
+
+    <!-- Mobile Menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+          <svg
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
+  
+        <ul class="mobile-menu">
+          <li><a href="" class="link">About</a></li>
+          <li><a href="" class="link">Products</a></li>
+          <li><a href="" class="link">Contacts</a></li>
+          <li><a href="" class="link">Career</a></li>
+        </ul>
+      </div>
+  
+      <script
+        defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"
+      ></script>
+      <script defer src="./mobile-menu.js"></script>
 
     <script src="./js/modal.js"></script>
 
