--- a/index.html
+++ b/index.html
@@ -340,35 +340,35 @@
 
     <footer class="ftr-page">
         <div class="container ftr-container">
-            <div class="frt-descr">
-                <a href="./index.html" class="logo-web-frt link">Web<span class="ftr-logo-studio link">Studio</span></a>
+            <div class="ftr-descr">
+                <a href="./index.html" class="logo-web-ftr link">Web<span class="ftr-logo-studio link">Studio</span></a>
                 <p class="ftr-page-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
             <div class="ftr-media">
                 <p class="ftr-media-descr">Social media</p>
                 <ul class="ftr-icons-list list">
-                    <li class="frt-icon">
+                    <li class="ftr-icon">
                         <a href="" class="link-media" aria-label="Instagram">
                             <svg class="ftr-media" width="24" height="24">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="frt-icon">
+                    <li class="ftr-icon">
                         <a href="" class="link-media" aria-label="Twitter">
                             <svg class="ftr-media" width="24" height="24">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>            
                     </li>
-                    <li class="frt-icon">
+                    <li class="ftr-icon">
                         <a href="" class="link-media" aria-label="Facebook">
                             <svg class="ftr-media" width="24" height="24">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>                    
                     </li>
-                    <li class="frt-icon">
+                    <li class="ftr-icon">
                         <a href="" class="link-media" aria-label="Linkedin">
                             <svg class="ftr-media" width="24" height="24">
                                 <use href="./images/icons.svg#linkedin"></use>
