--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,11 @@
                     <li><a href="" target="_blank" class="body-medium-header link nav-link">Contacts</a></li>
                 </ul>
             </nav>
-
+            <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg class="menu-toggle-icon" width="32" height="22">
+                <use href="./images/icons.svg#burger"></use>
+            </svg>
+            </button>
             <address class="address">     
                 <ul class="list address-contacts">
                     <li><a href="mailto:info@devstudio.com" target="_blank" class="address link">info@devstudio.com</a></li>
