--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     <main>                 
         <section class="section-portfolio">
             
-            <div class="container">           
+            <div class="container filters-adaptiv">           
 
                     <h1 class="visually-hidden">Hidden section Portfolio</h1> 
 
@@ -185,7 +185,7 @@
     <!-- Footer -->
         <footer class="ftr-page">
             <div class="container ftr-container">
-                <div class=tr-descr">
+                <div class="ftr-descr">
                     <a href="./index.html" class="logo-web-ftr link">Web<span class="ftr-logo-studio link">Studio</span></a>
                     <p class="ftr-page-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
                 </div>
