2 - images, mob, modal - needed

--- a/index.html
+++ b/index.html
@@ -117,9 +117,15 @@
                 <div class="container">
                     <h2 class="header-two achievement">What are we doing</h2>
                         <ul class="list studio-img">
-                            <li class="ach-link"><a href=""><img src="./images/img-3.jpg" alt="Service_1" width="360"></a></li>
-                            <li class="ach-link"><a href=""><img src="./images/img-2.jpg" alt="Service_2" width="360"></a></li>
-                            <li class="ach-link"><a href=""><img src="./images/Rectangle-71.jpg" alt="Service_3" width="360"></a></li>
+                            <li class="ach-link"><a href=""><img 
+                                srcset=""
+                                src="./images/ach1@1x.jpg" alt="Service_1" width="360"></a></li>
+                            <li class="ach-link"><a href=""><img 
+                                srcset=""
+                                src="./images/ach2@1x.jpg" alt="Service_2" width="360"></a></li>
+                            <li class="ach-link"><a href=""><img 
+                                srcset=""
+                                src="./images/ach3@1x.jpg" alt="Service_3" width="360"></a></li>
                         </ul>
                 </div>
         </section>
@@ -131,7 +137,9 @@
                 <h2 class="header-two team-header">Our Team</h2>
                 <ul class="list cards">
                     <li class="team-member-card">
-                        <img src="./images/our_team/mark_guerrero.jpg" alt="Product Designer" width="264">
+                        <img 
+                        srcset="./images/our_team/team1@1x.png 1x, ./images/our_team/team1@2x.png 2x" 
+                        src="./images/our_team/team1@1x.png" alt="Product Designer" width="264">
                         <div class="card-name">
                             <h3 class="header-tree team-member-header">Mark Guerrero</h3>
                             <P class="body team-member-descr">Product Designer</P>
@@ -168,7 +176,9 @@
                         </div>
                     </li>
                     <li class="team-member-card">
-                        <img src="./images/our_team/tom_ford.jpg" alt="Frontend Developer" width="264">
+                        <img 
+                        srcset="./images/our_team/team2@1x.png 1x, ./images/our_team/team2@2x.png 2x" 
+                        src="./images/our_team/team2@1x.png" alt="Frontend Developer" width="264">
                         <div class="card-name">
                             <h3 class="header-tree team-member-header">Tom Ford</h3>
                             <p class="body team-member-descr">Frontend Developer</p>
@@ -205,7 +215,9 @@
                         </div>
                     </li>
                     <li class="team-member-card">
-                        <img src="./images/our_team/camila_garcia.jpg" alt="Marketing" width="264">
+                        <img 
+                        srcset="./images/our_team/team3@1x.png 1x, ./images/our_team/team3@2x.png 2x" 
+                        src="./images/our_team/team3@1x.png" alt="Marketing" width="264">
                         <div class="card-name">
                             <h3 class="header-tree team-member-header">Camila Garcia</h3>
                             <p class="body team-member-descr">Marketing</p>
@@ -242,7 +254,9 @@
                         </div>
                     </li>
                     <li class="team-member-card">
-                        <img src="./images/our_team/daniel_wilson.jpg" alt="UI Designer" width="264">
+                        <img 
+                        srcset="./images/our_team/team4@1x.png 1x, ./images/our_team/team4@2x.png 2x" 
+                        src="./images/our_team/team4@1x.png" alt="UI Designer" width="264">
                         <div class="card-name">
                             <h3 class="header-tree team-member-header">Daniel Wilson</h3>
                             <p class="body team-member-descr">UI Designer</p>
