--- a/index.html
+++ b/index.html
@@ -117,14 +117,17 @@
                 <div class="container">
                     <h2 class="header-two achievement">What are we doing</h2>
                         <ul class="list studio-img">
-                            <li class="ach-link"><a href=""><img 
-                                srcset=""
+                            <li class="ach-link"><a href="">
+                                <img 
+                                srcset="./images/ach1@1x.jpg 1x, ./images/ach1@1x.jpg 2x"
                                 src="./images/ach1@1x.jpg" alt="Service_1" width="360"></a></li>
-                            <li class="ach-link"><a href=""><img 
-                                srcset=""
+                            <li class="ach-link"><a href="">
+                                <img 
+                                srcset="./images/ach2@1x.jpg 1x, ./images/ach2@1x.jpg 2x"
                                 src="./images/ach2@1x.jpg" alt="Service_2" width="360"></a></li>
-                            <li class="ach-link"><a href=""><img 
-                                srcset=""
+                            <li class="ach-link"><a href="">
+                                <img 
+                                srcset="./images/ach3@1x.jpg 1x, ./images/ach3@1x.jpg 2x"
                                 src="./images/ach3@1x.jpg" alt="Service_3" width="360"></a></li>
                         </ul>
                 </div>
@@ -473,8 +476,7 @@
     <!-- Mobile Menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu">
-          <svg
-            
+          <svg           
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
@@ -500,28 +502,28 @@
                 <a class="link header-tree mob-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <ul class="list mob-version-list">
                     <li class="mob-icon">
-                        <a href="" rel="noopener norefferrer" class="mob-link">
+                        <a href="" rel="noopener norefferrer" class="team-link">
                             <svg class="mob-media" width="16" height="16">
                             <use href="./images/icons.svg#instagram" class="team-icon"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="mob-icon">
-                        <a href="" rel="noopener norefferrer" class="mob-link">
+                        <a href="" rel="noopener norefferrer" class="team-link">
                             <svg class="mob-media" width="16" height="16">
                             <use href="./images/icons.svg#twitter" class="team-icon"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="mob-icon">
-                        <a href="" rel="noopener norefferrer" class="mob-link">
+                        <a href="" rel="noopener norefferrer" class="team-link">
                             <svg class="mob-media" width="16" height="16">
                             <use href="./images/icons.svg#facebook" class="team-icon"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="mob-icon">
-                        <a href="" rel="noopener norefferrer" class="mob-link">
+                        <a href="" rel="noopener norefferrer" class="team-link">
                             <svg class="mob-media" width="16" height="16">
                             <use href="./images/icons.svg#linkedin" class="team-icon"></use>
                             </svg>
