--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
         <div class="mobile-menu-page">
             <div class="top-menu">
                 <ul class="mobile-menu">
-                  <li class="mob"><a href="" class="link header-two mob-pages">Studio</a></li>
-                  <li class="mob"><a href="" class="link header-two mob-pages">Portfolio</a></li>
+                  <li class="mob"><a href="./" class="link header-two mob-pages">Studio</a></li>
+                  <li class="mob"><a href="./portfolio.html"  class="link header-two mob-pages">Portfolio</a></li>
                   <li class="mob"><a href="" class="link header-two mob-pages">Contacts</a></li>
                 </ul>
             </div>
