--- a/index.html
+++ b/index.html
@@ -488,14 +488,18 @@
         <div class="mobile-menu-page">
             <div class="top-menu">
                 <ul class="mobile-menu">
-                  <li class="mob"><a href="./" class="link header-two mob-pages">Studio</a></li>
+                  <li class="mob"><a href="./index.html" class="link header-two mob-pages active-page">Studio</a></li>
                   <li class="mob"><a href="./portfolio.html"  class="link header-two mob-pages">Portfolio</a></li>
                   <li class="mob"><a href="" class="link header-two mob-pages">Contacts</a></li>
                 </ul>
             </div>
             <div class="mob-contacts">
-                <a href="tel:+110001111111" class="link" target="_blank" rel="noopener norefferrer"><p class="header-two mob-tel">+11 (000) 111-11-11</p></a>
-                <a class="link header-tree mob-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <!-- <a href="tel:+110001111111" class="link" target="_blank" rel="noopener norefferrer"><p class="header-two mob-tel">+11 (000) 111-11-11</p></a>
+                <a class="link header-tree mob-link" href="mailto:info@devstudio.com">info@devstudio.com</a> -->
+                <ul>
+                    <li><a href="tel:+110001111111" class="link" target="_blank" rel="noopener norefferrer"><p class="header-two mob-tel">+11 (000) 111-11-11</p></a></li>
+                    <li><a class="link header-tree mob-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                </ul>
                 <ul class="list mob-version-list">
                     <li class="mob-icon">
                         <a href="" rel="noopener norefferrer" class="team-link">
