--- a/index.html
+++ b/index.html
@@ -488,17 +488,18 @@
         <div class="mobile-menu-page">
             <div class="top-menu">
                 <ul class="mobile-menu">
-                  <li class="mob"><a href="./index.html" class="link header-two mob-pages active-page">Studio</a></li>
-                  <li class="mob"><a href="./portfolio.html"  class="link header-two mob-pages">Portfolio</a></li>
-                  <li class="mob"><a href="" class="link header-two mob-pages">Contacts</a></li>
+                  <li class="mob"><a href="./index.html" 
+                    class="link header-two mob-pages active-page">Studio</a></li>
+                  <li class="mob"><a href="./portfolio.html"  
+                    class="link header-two mob-pages">Portfolio</a></li>
+                  <li class="mob"><a href="" 
+                    class="link header-two mob-pages">Contacts</a></li>
                 </ul>
             </div>
             <div class="mob-contacts">
-                <!-- <a href="tel:+110001111111" class="link" target="_blank" rel="noopener norefferrer"><p class="header-two mob-tel">+11 (000) 111-11-11</p></a>
-                <a class="link header-tree mob-link" href="mailto:info@devstudio.com">info@devstudio.com</a> -->
-                <ul>
-                    <li><a href="tel:+110001111111" class="link" target="_blank" rel="noopener norefferrer"><p class="header-two mob-tel">+11 (000) 111-11-11</p></a></li>
-                    <li><a class="link header-tree mob-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <ul class="mob-info">
+                    <li class="list header-tree mob-link mob-phone"><a href="tel:+110001111111" class="link" target="_blank" rel="noopener norefferrer">+11 (000) 111-11-11</a></li>
+                    <li class="list header-tree mob-link"><a class="link mob-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 </ul>
                 <ul class="list mob-version-list">
                     <li class="mob-icon">
