--- a/index.html
+++ b/index.html
@@ -488,11 +488,14 @@
         <div class="mobile-menu-page">
             <div class="top-menu">
                 <ul class="mobile-menu">
-                  <li class="mob"><a href="./index.html" 
+                  <li class="mob">
+                    <a href="./index.html" 
                     class="link header-two mob-pages active-page">Studio</a></li>
-                  <li class="mob"><a href="./portfolio.html"  
+                  <li class="mob">
+                    <a href="./portfolio.html"  
                     class="link header-two mob-pages">Portfolio</a></li>
-                  <li class="mob"><a href="" 
+                  <li class="mob">
+                    <a href="" 
                     class="link header-two mob-pages">Contacts</a></li>
                 </ul>
             </div>
