--- a/index.html
+++ b/index.html
@@ -489,13 +489,13 @@
                 <ul class="mobile-menu">
                   <li class="mob">
                     <a href="./index.html" 
-                    class="link header-two mob-pages active-page">Studio</a></li>
+                    class="link header-two">Studio</a></li>
                   <li class="mob">
                     <a href="./portfolio.html"  
-                    class="link header-two mob-pages">Portfolio</a></li>
+                    class="link header-two">Portfolio</a></li>
                   <li class="mob">
                     <a href="" 
-                    class="link header-two mob-pages">Contacts</a></li>
+                    class="link header-two">Contacts</a></li>
                 </ul>
             </div>
             <div class="mob-contacts">
