customers (768-1158) - max-width: 548px

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <!-- Address -->
             <address class="address">     
                 <ul class="list address-contacts">
-                    <li><a href="mailto:info@devstudio.com" target="_blank" class="address link">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111" target="_blank" class="address link">+11 (000) 111-11-11</a></li>
+                    <li><a href="mailto:info@devstudio.com" target="_blank" class="address address-contacts-link  link">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" target="_blank" class="address address-contacts-link  link">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
                 <button type="button" class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
